; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_ifa_ifwithroute.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_ifa_ifwithroute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddr = type { i32 }
%struct.sockaddr = type { i32 }

@rnh_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ifaddr* @ifa_ifwithroute(i32 %0, %struct.sockaddr* %1, %struct.sockaddr* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockaddr*, align 8
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca %struct.ifaddr*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.sockaddr* %1, %struct.sockaddr** %5, align 8
  store %struct.sockaddr* %2, %struct.sockaddr** %6, align 8
  %8 = load i32, i32* @rnh_lock, align 4
  %9 = call i32 @lck_mtx_lock(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %12 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %13 = call %struct.ifaddr* @ifa_ifwithroute_locked(i32 %10, %struct.sockaddr* %11, %struct.sockaddr* %12)
  store %struct.ifaddr* %13, %struct.ifaddr** %7, align 8
  %14 = load i32, i32* @rnh_lock, align 4
  %15 = call i32 @lck_mtx_unlock(i32 %14)
  %16 = load %struct.ifaddr*, %struct.ifaddr** %7, align 8
  ret %struct.ifaddr* %16
}

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local %struct.ifaddr* @ifa_ifwithroute_locked(i32, %struct.sockaddr*, %struct.sockaddr*) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
